@@ -4,7 +4,7 @@
 
   <!ENTITY dhfirstname "<firstname>Petr</firstname>">
   <!ENTITY dhsurname   "<surname>Kubanek</surname>">
-  <!ENTITY dhdate      "<date>2007-10-23</date>">
+  <!ENTITY dhdate      "<date>2014-07-11</date>">
   <!ENTITY dhsection   "<manvolnum>1</manvolnum>">
   <!ENTITY dhemail     "<email>petr@kubanek.net</email>">
   <!ENTITY dhusername  "Petr Kubanek">
@@ -31,7 +31,7 @@
       </author>
     </authorgroup>
     <copyright>
-      <year>2007,2010</year>
+      <year>2007,2010,2014</year>
       <holder>&dhusername;</holder>
     </copyright>
     &legal;
@@ -70,10 +70,10 @@
 	<arg choice="plain"><option>-I</option></arg>
       </arg>
       <arg choice="opt">
-        <arg choice="plain"><option>-p</option></arg>
+        <arg choice="plain"><option>-m</option></arg>
       </arg>
       <arg choice="opt">
-        <arg choice="plain"><option>-P</option></arg>
+        <arg choice="plain"><option>-M</option></arg>
       </arg>
       <arg choice="opt">
         <arg choice="plain"><option>-s</option></arg>
@@ -124,6 +124,12 @@
         </listitem>
       </varlistentry>
       <varlistentry>
+        <term><option>-P <replaceable class="parameter">RTS2 expression</replaceable></option></term>
+	<listitem>
+	  <para>Print RTS2 expression for the listed images</para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
         <term><option>--nomsg</option></term>
         <listitem>
           <para>Do not print messages.</para>
@@ -137,6 +143,10 @@
 
     <screen>
       <command>&dhpackage;</command> <option>-n</option> <replaceable>2007-12-12</replaceable>
+    </screen>
+
+    <screen>
+      <command>&dhpackage;</command> <option>-P</option> <replaceable>@CORR_RA @CORR_DEC</replaceable>
     </screen>
 
   </refsect1>
